[project]
name = "interview-agent-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.1",
    "requests>=2.34.2",
    "python-multipart>=0.0.9",
    "openai-whisper>=20250625",
    "pyannote-audio>=4.0.4",
    "openai>=2.38.0",
]
